# pylint-twisted

./: .coveragerc  .gitignore  README.md  dev-requirements.txt  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yaml
pylint_twisted/: __init__.py
test/: test_defer_inlinecallbacks.py  test_func.py
tests/: deferred.py  deferred.txt  reactor.py  reactor.txt  test_defer_inlinecallbacks.py  test_defer_returnvalue.py  test_functional.py
