[tool.poetry]
name = "pylint-twisted"
version = "0.4.0"
license = "GPLv2"
description = "pylint-twisted is a Pylint plugin to aid Pylint in recognizing and understanding errors caused when using Twisted"
authors = [
    "Pexip AS <packaging@pexip.com>",
    "Huw Jones <huw@pexip.com>",
]
repository = "https://github.com/pexip/pylint-twisted"
readme = "README.md"
keywords = ["pylint", "plugin", "twisted"]
classifiers = [
    'Environment :: Console',
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Quality Assurance',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
]
packages = [
    { include = "pylint_twisted"}
]
exclude = [
    "**/tests/**/*",
    "**/test/**/*",
]

[build-system]
requires = ["setuptools>=40.8.0", "wheel", "toml"]
build-backend = "setuptools.build_meta"

[tool.poetry.dependencies]
python = ">=3.6,<4.0"
importlib-metadata = {version = "^1.0", python = "<3.8"}
astroid = ">=1.0"
pylint = ">=1.0"
pylint-plugin-utils = ">=0.2.1"
Twisted = ">=18.9.0"

[tool.poetry.dev-dependencies]
pytest = ">=1.0"
