[tool.poetry]
name = "pylint-twisted"
version = "0.4.0"
license = "GPLv2"
description = "pylint-twisted is a Pylint plugin to aid Pylint in recognizing and understanding errors caused when using Twisted"
authors = [
    "Pexip AS <packaging@pexip.com>",
    "Huw Jones <huw@pexip.com>",
]
repository = "https://github.com/pexip/pylint-twisted"
readme = "README.md"
keywords = ["pylint", "plugin", "twisted"]
classifiers = [
    'Environment :: Console',
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Quality Assurance',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
]
packages = [
    { include = "pylint_twisted"}
]
exclude = [
    "**/tests/**/*",
    "**/test/**/*",
]

[build-system]
requires = ["setuptools>=40.8.0", "wheel", "toml"]
build-backend = "setuptools.build_meta"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
astroid = ">=2.14.2"
pylint = ">=2.16.2"
pylint-plugin-utils = ">=0.2.1"
Twisted = ">=22.4.0"

[tool.poetry.dev-dependencies]
pytest = ">=1.0"
